--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # created by virtualenv automatically
-/Lib
-/Scripts
-/env
-/.idea
-/pyvenv.cfg
+Lib
+Scripts
+env
+.idea
+pyvenv.cfg
+__pycache__
+__init__.py
